--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Pop!</title>
+  <title>David Björklund</title>
 </head>
 
 <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
@@ -12,17 +12,21 @@
     font-family: 'IM Fell Double Pica', serif;
     font-size: 20px;
     text-align: center;
-    background: green;
+    background: url(./background.jpg);
+    background-size: cover;
+    background-position: center center;
     margin-right: 15px;
     margin-left: 15px;
-    margin-top: 15px;
+    /*margin-top: 15px;*/
+    height: 100%;
   }
 
   #content {
-    background-color: rgba(256, 256, 256, 0.9);
+    background-color: rgba(256, 256, 256, 0.8);
     max-width: 480px;
     margin-right: auto;
     margin-left: auto;
+    margin-bottom: 15px;
     padding-top: 15px;
     padding-bottom: 15px;
     border-radius: 10px;
@@ -38,11 +42,11 @@
   }
 
   h1 .green {
-    color: #A0D562;
+    color: #85c062;
   }
 
   .fa {
-    color: #A0D562;
+    color: #85c062;
     font-size: 44px;
     transition: all 300ms ease-in-out;
     padding-left: 11px;
@@ -62,12 +66,11 @@
     color: black;
   }
 
-  a {
-    text-decoration: none;
-  }
 </style>
 
 <body>
+
+  <div style="height: 15px;"></div>
 
   <div id="content">
     <img src="https://avatars2.githubusercontent.com/u/74128?s=400">
@@ -75,10 +78,6 @@
     <h1>
       Hi! I'm <span class="pink">David Björklund</span>
     </h1>
-
-    <p>
-      Connect with me
-    </p>
 
     <p>
       <a href="https://github.com/kesla/" target="_blank" class="first"><i class="fa fa-github-square"></i></a>
