change font and other style fixes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
 <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css">
-<link href='http://fonts.googleapis.com/css?family=IM+Fell+Double+Pica' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
 
 <style type="text/css">
   html {
@@ -18,7 +18,7 @@
   }
 
   body {
-    font-family: 'IM Fell Double Pica', serif;
+    font-family: 'Roboto Slab', serif;
     font-size: 15px;
     text-align: center;
     background: url(https://farm1.staticflickr.com/51/196434777_2b5c9ae170_b.jpg);
@@ -40,6 +40,7 @@
     background-color: rgba(256, 256, 256, 0.8);
     padding: 1em;
     border-radius: 10px;
+    border: 1px solid rgba(0,0,0,0.05);
   }
 
   img {
@@ -99,7 +100,7 @@
       <img src="https://avatars2.githubusercontent.com/u/74128?s=400">
 
       <h1>
-        Hi! I'm <span class="pink">David Björklund</span>
+        Hi! I'm <span class="pink">David Björklund</span>.
       </h1>
 
       <div>
