nicer hover effect

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     transition: all 300ms ease-in-out;
     padding-left: 0.25em;
     padding-right: 0.25em;
+    position: relative;
   }
 
   .first .fa {
@@ -69,8 +70,9 @@
   }
 
   .fa:hover {
-    transition: all 300ms ease-in-out;
+    transition: all 400ms ease-in-out;
     color: black;
+    top: -2px;
   }
 
   .attribution {
