vertical align center

--- a/index.html
+++ b/index.html
@@ -14,27 +14,26 @@
 <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
 
 <body>
+  <div id="container">
+    <div id="content">
+      <div id="box">
+        <img src="https://avatars2.githubusercontent.com/u/74128?s=400">
 
-  <div style="height: 1em;"></div>
+        <h1>
+          Hi! I'm <span class="pink">David Björklund</span>.
+        </h1>
 
-  <div id="content">
-    <div id="box">
-      <img src="https://avatars2.githubusercontent.com/u/74128?s=400">
-
-      <h1>
-        Hi! I'm <span class="pink">David Björklund</span>.
-      </h1>
-
-      <div>
-        <a href="https://github.com/kesla/" target="_blank" class="first"><i class="fa fa-github-square"></i></a>
-        <a href="http://twitter.com/david_bjorklund" target="_blank"><i class="fa fa-twitter-square"></i></a>
-        <a href="http://instagram.com/david_bjorklund" target="_blank"><i class="fa fa-instagram"></i></a>
-        <a href="http://se.linkedin.com/in/davidbjorklund/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
-        <a href="http://open.spotify.com/user/kesla" target="_blank" class="last"><i class="fa fa-spotify"></i></a>
+        <div>
+          <a href="https://github.com/kesla/" target="_blank" class="first"><i class="fa fa-github-square"></i></a>
+          <a href="http://twitter.com/david_bjorklund" target="_blank"><i class="fa fa-twitter-square"></i></a>
+          <a href="http://instagram.com/david_bjorklund" target="_blank"><i class="fa fa-instagram"></i></a>
+          <a href="http://se.linkedin.com/in/davidbjorklund/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+          <a href="http://open.spotify.com/user/kesla" target="_blank" class="last"><i class="fa fa-spotify"></i></a>
+        </div>
       </div>
-    </div>
-    <div class="attribution">
-      Photo by <a href="https://flic.kr/p/imMdv">peterallen</a> under license <a href="http://creativecommons.org/licenses/by/2.0/">CC BY 2.0</a>
+      <div class="attribution">
+        Photo by <a href="https://flic.kr/p/imMdv">peterallen</a> under license <a href="http://creativecommons.org/licenses/by/2.0/">CC BY 2.0</a>
+      </div>
     </div>
   </div>
 </body>
