--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="https://avatars2.githubusercontent.com/u/74128?s=400">
 
         <h1>
-          Hi! I'm <span class="name">David Björklund</span>.
+          Hi! <span class="fadein2">I'm <span class="name">David Björklund</span>.</span>
         </h1>
 
         <div>
