fade in even nice. super nice!

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <div id="box">
         <img src="https://avatars2.githubusercontent.com/u/74128?s=400">
 
-        <h1>
-          Hi! <span class="fadein">I'm <span class="name">David Björklund</span>.</span>
+        <h1 class="fadein1">
+          Hi! <span class="fadein2">I'm <span class="name">David Björklund</span>.</span>
         </h1>
 
         <div>
