--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   <div id="container">
     <div id="content">
       <div id="box">
-        <img src="https://avatars2.githubusercontent.com/u/74128?s=400" class="fadein delay-0">
+        <img src="https://avatars2.githubusercontent.com/u/74128?s=400">
 
-        <h1 class="fadein delay-2">
-          Hi! <span class="fadein delay-3">I'm <span class="name">David Björklund</span>.</span>
+        <h1 class="fadein delay-1">
+          Hi! <span class="fadein delay-2">I'm <span class="name">David Björklund</span>.</span>
         </h1>
 
-        <div class="fadein delay-1">
+        <div class="fadein delay-3">
           <a href="https://github.com/kesla/" target="_blank" class="first"><i class="fa fa-github-square"></i></a>
           <a href="http://twitter.com/david_bjorklund" target="_blank"><i class="fa fa-twitter-square"></i></a>
           <a href="http://instagram.com/david_bjorklund" target="_blank"><i class="fa fa-instagram"></i></a>
