more pink on i-dont-eat

--- a/i-dont-eat.html
+++ b/i-dont-eat.html
@@ -19,7 +19,7 @@
       <div id="box">
 
         <h1 class="fadein delay-1">
-          Stuff I don't eat!
+          Stuff I <span class="pink">don't</span> eat!
         </h1>
 
         <p class="fadein delay-2">Almonds, Apples, Apricots, Carrots, Cherries, Lactose, Meat (but sometimes fish) & Pears</p>
