--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
           <a href="http://se.linkedin.com/in/davidbjorklund/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
           <a href="http://open.spotify.com/user/kesla" target="_blank" class="last"><i class="fa fa-spotify"></i></a>
         </div>
+
+        <p class="fadein delay-4"><a href="/i-dont-eat">IClick <a href="/i-dont-eat">here</a> for a list of what I don't eat.</a></p>
       </div>
       <div class="attribution">
         Photo by <a href="https://flic.kr/p/imMdv">peterallen</a> under license <a href="http://creativecommons.org/licenses/by/2.0/">CC BY 2.0</a>
