cleanup, lighter on hover on clickable

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div id="container">
     <div id="content">
       <div id="box">
-        <img src="https://avatars2.githubusercontent.com/u/74128?s=400">
+        <img src="https://avatars2.githubusercontent.com/u/74128?s=400" class="fadein">
 
         <h1 class="fadein delay-1">
           Hi! <span class="fadein delay-2">I'm <span class="name">David Björklund</span>.</span>
