--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <div id="box">
         <img src="https://avatars2.githubusercontent.com/u/74128?s=400" class="fadein">
 
-        <h1 class="fadein delay-1">
-          Hi! <span class="fadein delay-2">I'm <span class="name">David Björklund</span>.</span>
+        <h1 class="fadein delay-2">
+          Hi! I'm <span class="name">David Björklund</span>
         </h1>
 
         <div class="fadein delay-3">
@@ -30,7 +30,7 @@
           <a href="http://open.spotify.com/user/kesla" target="_blank" class="last"><i class="fa fa-spotify"></i></a>
         </div>
 
-        <p class="fadein delay-4">Click <a href="/i-dont-eat">here</a> for a list of what I don't eat.</a></p>
+        <p class="fadein delay-3">Click <a href="/i-dont-eat">here</a> for a list of what I don't eat.</a></p>
       </div>
     </div>
   </div>
