update what I don't eat

--- a/i-dont-eat.html
+++ b/i-dont-eat.html
@@ -22,7 +22,7 @@
           Stuff I don't eat!
         </h1>
 
-        <p class="fadein delay-2">Almonds, Apples, Apricots, Carrots, Cherries, Lactose, Meat (but sometimes fish) & Pears</p>
+        <p class="fadein delay-2">Almonds, Apples, Apricots, Carrots, Cherries, Chicken, Fish, Meat (but I do eat dairy and eggs) & Pears</p>
       </div>
     </div>
   </div>
