--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
-  <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto+Slab" >
+  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto+Slab" >
   <link rel="stylesheet" type="text/css" href="./build/main.css">
 </head>
 <body>
@@ -23,10 +23,11 @@
         </h1>
 
         <div class="fadein delay-3">
-          <a href="https://github.com/kesla/" target="_blank" class="first"><i class="fa fa-github-square"></i></a>
-          <a href="http://twitter.com/david_bjorklund" target="_blank"><i class="fa fa-twitter-square"></i></a>
+          <a href="https://github.com/kesla/" target="_blank" class="first"><i class="fa fa-github"></i></a>
+          <a href="http://twitter.com/david_bjorklund" target="_blank"><i class="fa fa-twitter"></i></a>
+          <a href="https://medium.com/@david_bjorklund" target="_blank"><i class="fa fa-medium"></i></a>
           <a href="http://instagram.com/david_bjorklund" target="_blank"><i class="fa fa-instagram"></i></a>
-          <a href="http://se.linkedin.com/in/davidbjorklund/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+          <a href="http://se.linkedin.com/in/davidbjorklund/" target="_blank"><i class="fa fa-linkedin"></i></a>
           <a href="http://open.spotify.com/user/kesla" target="_blank" class="last"><i class="fa fa-spotify"></i></a>
         </div>
 
